  (Of course KWord itself saves text with <TEXT>...</TEXT> now too :-)

Reggie, 23.12.1998:
-------------------
- Fixed a bug when loading framesets with no text (1 parag with textlen == 0)
- Implemented loading/saving headers/footes (Kalle, I'll send you a mail with the new tags/attributes)
- Some fixes
- Different footer/header for first page and the rest of the doc start working now (there are still some problems)

Reggie, 25.12.1998:
-------------------
- Different footer/header for first page and the rest of the doc are working fine now (also for printing)
- Fixes when loading headers/footers
- Different headers/footers for even and odd pages works now

Reggie, 26.12.1998:
-------------------
- Printing of different headers/footers of even and odd pages works now
- Bugfixes

Reggie, 27.12.1998:
-------------------
- Speed improvements again (now the number of used fonts/formats doesn't influence the speed anymore)
- Worked a bit on the DTD
- Reorganized UI of stylist (with german translation ig got much too wide)
- Started implementing spellchecking

Reggie, 28.12.1998:
-------------------
- More work on spell checking
- Started with the tab for tabulator settings in the parag layout dia
- Some small fixes

Reggie, 29.12.1998:
-------------------
- Fixes with tabulators and moving/resizing frames/borders

Reggie, 30.12.1998:
-------------------
- Cleanups
- Implemented internals for searching and replacing text (will be used for autoformat too)

Reggie, 1.1.1999:
-----------------
- More work on searching and replacing text (internals seems to work now - only the dialog is missing :-)

Reggie, 3.1.1999:
-----------------
- Started with search & replace dialog
- Simple searching (without formats) with the dialog works

Reggie, 4.1.1999:
-----------------
- Implemented searching with formats
- Lots of fixes (updating the rulers seems to work correctly now :-)