@@ -412,9 +412,9 @@ void KWParag::tabListChanged(QList<KoTabulator>* _tabList)
   paragLayout->setTabList(_tabList);
 }
 
-int KWParag::find(QString _expr,KWSearchDia::KWSearchEntry *_format,int _index,bool _cs)
+int KWParag::find(QString _expr,KWSearchDia::KWSearchEntry *_format,int _index,bool _cs,bool _whole)
 {
-  return text.find(_expr,_format,_index,_cs);
+  return text.find(_expr,_format,_index,_cs,_whole);
 }
 
 int KWParag::find(QRegExp _regexp,KWSearchDia::KWSearchEntry *_format,int _index)
@@ -422,9 +422,9 @@ int KWParag::find(QRegExp _regexp,KWSearchDia::KWSearchEntry *_format,int _index
   return text.find(_regexp,_format,_index);
 }
 
-int KWParag::findRev(QString _expr,KWSearchDia::KWSearchEntry *_format,int _index,bool _cs)
+int KWParag::findRev(QString _expr,KWSearchDia::KWSearchEntry *_format,int _index,bool _cs,bool _whole)
 {
-  return text.findRev(_expr,_format,_index,_cs);
+  return text.findRev(_expr,_format,_index,_cs,_whole);
 }
 
 int KWParag::findRev(QRegExp _regexp,KWSearchDia::KWSearchEntry *_format,int _index)
